add new home page

--- a/InstitutionalHomepage.html
+++ b/InstitutionalHomepage.html
@@ -228,7 +228,7 @@
               
               <img src="assets/images/Blog.png" alt="Blog" style="width: 14px;">
               </li>
-              <!-- <li
+              <li
               class="animation"
               data-animation="fadeInDown"
               data-animation-delay="1.9s"
@@ -237,7 +237,7 @@
             href="https://rivera.money/cbp/"
            class="anchar_hvr"
             >CBP</a>
-            </li> -->
+            </li>
               <li
               class="animation"
               data-animation="fadeInDown"
@@ -302,7 +302,7 @@
          <div class="gateWay_flex_inner"><img src="assets/images/home_mobile_gateway.webp" alt="Investors friendly experience"></div>
          <div class="gateWay_flex_inner">
           <div>
-            <div class="gateWay_flex_inner_header_16">Cross-chain to access full liquidity</div>
+            <div class="gateWay_flex_inner_header_16">Cross-chain to access max liquidity</div>
             <div class="line_height_25">Market composability across chains to unlock complete liquidity rather than be limited by individual on-chain liquidity</div>
            </div>
            <div class="mt_80">
@@ -324,8 +324,8 @@
             </div>
           </div>
           <div class="gateWay_flex_mobile_inner mb-5">
-            <div class="mb-3"><img src="assets/images/inestor_mbl3.webp" alt="Cross-chain to access full liquidity" class="wdt_90"></div>
-            <div class="list_header mb-2">Cross-chain to access full liquidity</div>
+            <div class="mb-3"><img src="assets/images/inestor_mbl3.webp" alt="Cross-chain to access max liquidity" class="wdt_90"></div>
+            <div class="list_header mb-2">Cross-chain to access max liquidity</div>
             <div>Market composability across chains to unlock complete liquidity rather than be limited by individual on-chain liquidity
             </div>
           </div>
@@ -361,7 +361,7 @@
                   <div class="card-body text-center">
                     <div class="list_header txt_algn_lft">Build, simulate and execute </div>
                     <div class="stack_img mt_4rm">
-                      <img src="assets/images/home_gateway111.webp" alt="Build, simulate and execute" class="flt_lft" />
+                      <img src="assets/images/home_gateway111.webp" alt="Deep liquidity" class="flt_lft" />
                     </div>
                   </div>
                 </div>
@@ -383,7 +383,7 @@
                   <div class="card-body text-center">
                     <div class="list_header txt_algn_lft">Bank level operational security</div>
                     <div class="stack_img mt_4rm">
-                      <img src="assets/images/home_gateway222.webp" alt="Bank level operational security" style="height: 90px !important;" class="flt_lft" />
+                      <img src="assets/images/home_gateway222.webp" alt="Community owned" style="height: 90px !important;" class="flt_lft" />
                     </div>
                   </div>
                 </div>
@@ -404,7 +404,7 @@
                   <div class="card-body text-center">
                     <div class="list_header txt_algn_lft">Built-in risk monitoring</div>
                     <div class="stack_img mt_4rm">
-                      <img src="assets/images/home_gateway333.webp" style="height: 80px !important;" alt="Built-in risk monitoring" class="flt_lft" />
+                      <img src="assets/images/home_gateway333.webp" style="height: 80px !important;" alt="Your funds" class="flt_lft" />
                     </div>
                   </div>
                 </div>
@@ -520,10 +520,12 @@
 
     <!-- START FOOTER SECTION -->
     <footer>
-      <div class="top_footer bg_light_dark">
+      <div
+        class="top_footer bg_light_dark"
+      >
         <div class="custom-container-footer">
-          <div class="row" style="    justify-content: space-between;">
-            <div class="col-lg-4 col-md-12">
+          <div class="row">
+            <div class="col-lg-3 col-md-12">
               <div
                 class="footer_logo mb-3"
               >
@@ -532,19 +534,51 @@
                 </a>
               </div>
             </div>
-            <div class="col-lg-4 col-md-6 res_md_mt_30 res_sm_mt_20 text-center">
-              <h4 class="footer_title_home" >
+            <div class="col-lg-3 col-md-6 res_md_mt_30 res_sm_mt_20">
+              <h4
+                class="footer_title border_title"
+              >
                 Contact us
               </h4>
               <ul class="footer_link list_arrow">
                 <li>
                   <a href="mailto:contact@rivera.money">contact@rivera.money</a>
                 </li>
+                <li>
+                  <!-- <a href="#">+91 12345 12345</a> -->
+                </li>
               </ul>
             </div>
-            <div class="col-lg-4 col-md-12 mt_20_res text-right">
+            <div class="col-lg-3 col-md-6 res_md_mt_30 res_sm_mt_20">
+              <div class="newsletter_form">
+                <h4
+                  class="footer_title border_title"
+                >
+                  Know more
+                </h4>
+
+                <ul class="footer_link list_arrow bck_dspl">
+                  <!-- <li>
+                    <a href="#" >FAQs</a>
+                  </li> -->
+                  <li style="margin-right: 50%">
+                    <a href="https://medium.com/rivera-money" target="_blank" class="anchar_hvr">Blog</a>
+                  </li>
+                  <li>
+                    <a href="https://rivera.money/cbp/" class="anchar_hvr">CBP</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-12 mt_20_res">
               <div class="footer_logo mb-3">
-                <div class="">
+                <div class="ftr_pos">
+                  <!-- <div>
+                    <img class="wdth_50" src="assets/images/insta.png" />
+                  </div>
+                  <div>
+                    <img class="wdth_50" src="assets/images/linknd.png" />
+                  </div> -->
                   <div>
                     <a href="https://twitter.com/Rivera_Money_" target="_blank"> <img alt="Twitter" class="wdth_50" src="assets/images/twitter.png" /></a>
                   </div>
@@ -552,9 +586,6 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="text-center mt-4" style="    font-size: 14px;">
-            <span>Copyright © 2022. Rivera. All rights reserved.</span>
         </div>
       </div>
       <!-- <div class="bottom_footer">
