medium icon add

--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
                 </a>
               </div>
             </div>
-            <div class="col-lg-4 col-md-6 res_md_mt_30 res_sm_mt_20 text-center">
+            <div class="col-lg-4 col-md-6 res_md_mt_30 res_sm_mt_20 ftr_contact_us">
               <h4 class="footer_title_home" >
                 Contact us
               </h4>
@@ -542,12 +542,11 @@
                 </li>
               </ul>
             </div>
-            <div class="col-lg-4 col-md-12 mt_20_res text-right">
+            <div class="col-lg-4 col-md-12 mt_20_res ftr_icon">
               <div class="footer_logo mb-3">
-                <div class="">
-                  <div>
-                    <a href="https://twitter.com/Rivera_Money_" target="_blank"> <img alt="Twitter" class="wdth_50" src="assets/images/twitter.png" /></a>
-                  </div>
+                <div>
+                  <a href="https://medium.com/rivera-money" target="_blank" class="mr_10"> <img alt="medium" class="wdth_50" src="assets/images/medium.webp" /></a>
+                  <a href="https://twitter.com/Rivera_Money_" target="_blank"> <img alt="Twitter" class="wdth_50" src="assets/images/twitter.png" /></a>
                 </div>
               </div>
             </div>
@@ -557,21 +556,6 @@
             <span>Copyright © 2022. Rivera. All rights reserved.</span>
         </div>
       </div>
-      <!-- <div class="bottom_footer">
-            <div class="custom-container">
-                <div class="row">
-                    <div class="col-md-6">
-                        <p class="copyright">Copyright &copy; 2018 All Rights Reserved.</p>
-                    </div>
-                    <div class="col-md-6">
-                        <ul class="list_none footer_menu">
-                            <li><a href="#">Privacy Policy</a></li>
-                            <li><a href="#">Terms & Conditions</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div> -->
 
         
 <!-- newsletter Success MOdal -->
