font family and content update

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900"
       rel="stylesheet"
     />
-    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&family=Red+Hat+Display:wght@300;400;500;700;900&display=swap" rel="stylesheet">
     <!-- Font Awesome CSS -->
     <!-- Style CSS -->
     <link rel="stylesheet" href="assets/css/style.css" />
@@ -296,19 +296,19 @@
               <div class="line_height_25">Explore top crypto assets and find the best DeFi opportunities aggregated through one easy-to-use interface</div>
              </div>
              <div class="mt_80">
-              <div class="gateWay_flex_inner_header_16">Fully regulated by design</div>
-              <div class="line_height_25">On-chain due diligence and permissioned architecture to ensure compliance with KYC/AML guidelines</div>
+              <div class="gateWay_flex_inner_header_16">Built-in risk monitoring framework</div>
+              <div class="line_height_25">Auto-assessment & actionable notifications for any intrinsic & exogenous risks among the active positions</div>
              </div>
          </div>
          <div class="gateWay_flex_inner"><img src="assets/images/home_mobile_gateway.webp" alt="Investors friendly experience"></div>
          <div class="gateWay_flex_inner">
           <div>
             <div class="gateWay_flex_inner_header_16">Cross-chain to access full liquidity</div>
-            <div class="line_height_25">Market composability across chains to unlock complete liquidity rather than be limited by individual on-chain liquidity</div>
+            <div class="line_height_25">Market composability across chains to unleash complete liquidity and true potential of advanced yield farming</div>
            </div>
            <div class="mt_80">
-            <div class="gateWay_flex_inner_header_16"> DeFi minus technical complexity</div>
-            <div class="line_height_25">Integrated bridges, built-in swaps, auto-compounding, and Oracle-based automation of DeFi Operations</div>
+            <div class="gateWay_flex_inner_header_16"> Easy and efficient  execution</div>
+            <div class="line_height_25">Integrated bridges, built-in swaps & smart automation to enable efficient txn with best margin, spread & slippage</div>
            </div>
         </div>
        </div>
@@ -327,20 +327,20 @@
           <div class="gateWay_flex_mobile_inner mb-5">
             <div class="mb-3"><img src="assets/images/inestor_mbl3.webp" alt="Cross-chain to access full liquidity" class="wdt_90"></div>
             <div class="list_header mb-2">Cross-chain to access full liquidity</div>
-            <div>Market composability across chains to unlock complete liquidity rather than be limited by individual on-chain liquidity
+            <div>Market composability across chains to unleash complete liquidity and true potential of advanced yield farming
             </div>
           </div>
           <div class="gateWay_flex_mobile_inner mb-5">
-            <div class="mb-3"><img src="assets/images/home_inestor_mbl2.webp" alt="Fully regulated by design" class="wdt_90"></div>
-            <div class="list_header mb-2">Fully regulated by design​​</div>
-            <div>On-chain due diligence and permissioned architecture to ensure compliance with KYC/AML guidelines
+            <div class="mb-3"><img src="assets/images/home_inestor_mbl2.webp" alt="Built-in risk monitoring framework" class="wdt_90"></div>
+            <div class="list_header mb-2">Built-in risk monitoring framework​​</div>
+            <div>Auto-assessment & actionable notifications for any intrinsic & exogenous risks among the active positions
             </div>
           </div>
           
           <div class="gateWay_flex_mobile_inner">
-            <div class="mb-3"><img src="assets/images/inestor_mbl1.webp" alt=" DeFi minus technical complexity" class="wdt_90"></div>
-            <div class="list_header mb-2"> DeFi minus technical complexity</div>
-            <div>Integrated bridges, built-in swaps, auto-compounding, and Oracle-based automation of DeFi Operations
+            <div class="mb-3"><img src="assets/images/inestor_mbl1.webp" alt=" Easy and efficient  execution" class="wdt_90"></div>
+            <div class="list_header mb-2"> Easy and efficient  execution</div>
+            <div>Integrated bridges, built-in swaps & smart automation to enable efficient txn with best margin, spread & slippage
             </div>
           </div>
        </div>
@@ -403,9 +403,9 @@
               <div class="front">
                 <div class="card">
                   <div class="card-body text-center">
-                    <div class="list_header txt_algn_lft">Built-in risk monitoring</div>
+                    <div class="list_header txt_algn_lft">KYT & AML/CTF Screening</div>
                     <div class="stack_img mt_4rm">
-                      <img src="assets/images/home_gateway333.webp" style="height: 80px !important;" alt="Built-in risk monitoring" class="flt_lft" />
+                      <img src="assets/images/home_gateway333.webp"  alt="KYT & AML/CTF Screening" class="flt_lft" />
                     </div>
                   </div>
                 </div>
@@ -413,7 +413,7 @@
               <div class="back">
                 <div class="card">
                     <div class="card-body">
-                        <div>Our risk assessment framework keeps your portfolio in check and monitors assets cross-chain to notify you of potential risks.</div>
+                        <div>On-chain due diligence with rigorous KYT & AML/CTF screening to ensure compliance with regulatory guidelines. </div>
                       </div>
                   </div>
               </div>
