--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- SITE TITLE -->
-    <title>Bridging DeFi to Institutional Investors</title>
+    <title>Simplifying DeFi Execution | Rivera Money</title>
     <meta name="description"
-    content="An institutional-grade DeFi plaform enabling investors to access the DeFi ecosystem in a secure, convenient, and risk-managed environment.">
-    <meta property="og:title" content="Bridging DeFi to Institutional Investors">
+    content="An institutional-grade DeFi platform enabling investment managers to compose & automate DeFi strategies in a risk-managed environment.">
+    <meta property="og:title" content="Simplifying DeFi Execution | Rivera Money">
     <meta property="og:description"
-        content="An institutional-grade DeFi plaform enabling investors to access the DeFi ecosystem in a secure, convenient, and risk-managed environment.">
+        content="An institutional-grade DeFi platform enabling investment managers to compose & automate DeFi strategies in a risk-managed environment.">
     <meta name="keywords" content="rivera, rivera money, yield mining, DeFi wallet, cross-chain strategy, liquidity mining, one stop DeFi solution, yield marketplace">
     <meta property="og:image" content="/assets/images/luxury_bggg.png">
    
@@ -266,11 +266,12 @@
                       Secure, Convenient and <br class="mob_hidden"> Private Vault for all <span>Valuables</span>
                   </h1> -->
                   <h1 class="industies_hero-title text-white text-extraBold mb-5" style="font-family: 'Red Hat Display', sans-serif;font-weight: 700;">
-                    Bridging DeFi to<br>
-                    Institutional Investors
+                    Infrastructure for
+                    <br>
+                    DeFi Execution
                   </h1>
                   <p class="mobile_vault_hero-para px-0 text-white">
-                    An institutional-grade DeFi plaform enabling investors to access the DeFi ecosystem in a secure, convenient, and risk-managed environment.
+                    An institutional-grade DeFi platform enabling investment managers to compose & automate DeFi strategies in a risk-managed environment.
                   </p>
                   <div class="btn_group pt-3 pb-3">
                     <button type="submit" name="submit2" style="margin: auto;"  class="btn btn-default btn-radius nav-link content-popup" onclick="window.location.href='#earlyAccess';">
@@ -351,8 +352,8 @@
     <!-- START SECTION SERVICES -->
     <section class="small_pt mrgn_top_mbl" style="margin-bottom: -30px;">
       <div class="custom-container">
-        <h1 class="section_subheader text-center mb-4 hrd_section_res">
-          Designed for Institutions
+        <h1 class="section_subheader text-center mb_60 hrd_section_res">
+          Institutional-grade design
         </h1>
         <div class="flex_cnt">
           <div class="flip-div gateway_section">
@@ -381,9 +382,9 @@
               <div class="front">
                 <div class="card">
                   <div class="card-body text-center">
-                    <div class="list_header txt_algn_lft">Bank level operational security</div>
+                    <div class="list_header txt_algn_lft">Bank-level operational security</div>
                     <div class="stack_img mt_4rm">
-                      <img src="assets/images/home_gateway222.webp" alt="Bank level operational security" style="height: 90px !important;" class="flt_lft" />
+                      <img src="assets/images/home_gateway222.webp" alt="Bank-level operational security" style="height: 90px !important;" class="flt_lft" />
                     </div>
                   </div>
                 </div>
