sub title update

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <!-- SITE TITLE -->
     <title>Simplifying DeFi Execution | Rivera Money</title>
     <meta name="description"
-    content="An institutional-grade DeFi platform enabling investment managers to compose & automate DeFi strategies in a risk-managed environment.">
+    content="An institutional-grade DeFi platform to compose and automate DeFi strategies in a risk-managed environment.">
     <meta property="og:title" content="Simplifying DeFi Execution | Rivera Money">
     <meta property="og:description"
-        content="An institutional-grade DeFi platform enabling investment managers to compose & automate DeFi strategies in a risk-managed environment.">
+        content="An institutional-grade DeFi platform to compose and automate DeFi strategies in a risk-managed environment.">
     <meta name="keywords" content="rivera, rivera money, yield mining, DeFi wallet, cross-chain strategy, liquidity mining, one stop DeFi solution, yield marketplace">
     <meta property="og:image" content="/assets/images/luxury_bggg.png">
    
@@ -271,7 +271,7 @@
                     DeFi Execution
                   </h1>
                   <p class="mobile_vault_hero-para px-0 text-white">
-                    An institutional-grade DeFi platform enabling investment managers to compose & automate DeFi strategies in a risk-managed environment.
+                    An institutional-grade DeFi platform to compose and automate DeFi strategies in a risk-managed environment.
                   </p>
                   <div class="btn_group pt-3 pb-3">
                     <button type="submit" name="submit2" style="margin: auto;"  class="btn btn-default btn-radius nav-link content-popup" onclick="window.location.href='#earlyAccess';">
