--- a/marketplace-product/cbp/index.html
+++ b/marketplace-product/cbp/index.html
@@ -187,7 +187,7 @@
           <nav class="navbar navbar-expand-lg">
             <a
               class="navbar-brand page-scroll animation"
-              href="https://rivera.money/"
+              href="/"
               data-animation="fadeInDown"
               data-animation-delay="1s"
             >
@@ -234,7 +234,7 @@
               data-animation-delay="1.9s"
             >
             <a 
-            href="https://rivera.money/cbp/"
+            href="/marketplace-product/cbp/"
            class="anchar_hvr"
             >CBP</a>
             </li>
