--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         <nav class="navbar navbar-expand-lg">
           <a
             class="navbar-brand page-scroll animation"
-            href="https://rivera.money/"
+            href="/"
             data-animation="fadeInDown"
             data-animation-delay="1s"
           >
