index page update

--- a/index.html
+++ b/index.html
@@ -268,12 +268,12 @@
                   <h1 class="industies_hero-title text-white text-extraBold mb-5" style="font-family: 'Red Hat Display', sans-serif;font-weight: 700;">
                     Infrastructure for
                     <br>
-                    DeFi Execution
+                    Structured DeFi Products
                   </h1>
-                  <p class="mobile_vault_hero-para px-0 text-white">
+                  <!-- <p class="mobile_vault_hero-para px-0 text-white">
                     An institutional-grade DeFi platform to compose and automate DeFi strategies in a risk-managed environment.
-                  </p>
-                  <div class="btn_group pt-3 pb-3">
+                  </p> -->
+                  <div class="btn_group pb-3">
                     <button type="submit" name="submit2" style="margin: auto;"  class="btn btn-default btn-radius nav-link content-popup" onclick="window.location.href='#earlyAccess';">
                       Get Early Access
                     </button>
