--- a/index.html
+++ b/index.html
@@ -265,14 +265,14 @@
                   <!-- <h1 class="mobile_vault_hero-title text-white">
                       Secure, Convenient and <br class="mob_hidden"> Private Vault for all <span>Valuables</span>
                   </h1> -->
-                  <h1 class="industies_hero-title text-white text-extraBold mb-5" style="font-family: 'Red Hat Display', sans-serif;font-weight: 700;">
+                  <h1 class="industies_hero-title text-white text-extraBold mb-4" style="font-family: 'Red Hat Display', sans-serif;font-weight: 700;">
                     Infrastructure for
                     <br>
                     Structured DeFi Products
                   </h1>
-                  <!-- <p class="mobile_vault_hero-para px-0 text-white">
-                    An institutional-grade DeFi platform to compose and automate DeFi strategies in a risk-managed environment.
-                  </p> -->
+                  <p class="mobile_vault_hero-para px-0 text-white">
+                    A professional-grade no-code environment to build goal-oriented investment products. Combine yield farming strategies with proven derivative techniques.
+                  </p>
                   <div class="btn_group pb-3">
                     <button type="submit" name="submit2" style="margin: auto;"  class="btn btn-default btn-radius nav-link content-popup" onclick="window.location.href='#earlyAccess';">
                       Get Early Access
@@ -287,61 +287,66 @@
     <!-- START SECTION SERVICES -->
     <section>
       <div class="custom-container dsk_device">
-        <h1 class="section_subheader text-center section_subheader_res mt_60 mb_80">
-          Simplifying DeFi Execution
+        <div class="col-lg-7 col-md-8 mt_60 mb_80" style="margin-left: auto;margin-right: auto;">
+        <h1 class="section_subheader text-center section_subheader_res" style="margin-bottom: 20px;">
+          Ready to launch fully-automated vaults
         </h1>
+        <p class="mobile_vault_hero-para px-0 text-white text-center">
+          Build & customize investment products with assets, protocols & strategies of your choice. Launch a non-custodial DeFi vault in seconds with our ready-to-use templates.
+        </p>
+      </div>
        <div class="gateWay_flex">
          <div class="gateWay_flex_inner">
              <div>
-              <div class="gateWay_flex_inner_header_16">Aggregated staking, lending & farming</div>
-              <div class="line_height_25">Explore top crypto assets and find the best DeFi opportunities aggregated through one easy-to-use interface</div>
+              <div class="gateWay_flex_inner_header_16">Multi-pool ACC vault</div>
+              <div class="line_height_25">Launch an auto-compounding vault with multiple assets & LPs. Automate your DeFi Ops with the highest efficiency.</div>
              </div>
              <div class="mt_80">
-              <div class="gateWay_flex_inner_header_16">Cross-chain to access full liquidity</div>
-              <div class="line_height_25">Integrated bridges for market composability; enabling users with seamless cross-chain execution</div>
+              <div class="gateWay_flex_inner_header_16">Crypto index vault</div>
+              <div class="line_height_25">Customize parameters & launch crypto index vaults with automatic rebalancing. Yield generation with protocols of choice.</div>
              </div>
          </div>
-         <div class="gateWay_flex_inner"><img src="assets/images/home_mobile_gateway.webp" alt="Simplifying DeFi Execution"></div>
+         <div class="gateWay_flex_inner"><img src="assets/images/home_mobile_gateway.png" alt="Ready to launch fully-automated vaults"></div>
          <div class="gateWay_flex_inner">
           <div>
-            <div class="gateWay_flex_inner_header_16">Automated & efficient transactions</div>
-            <div class="line_height_25">Smart automation and algorithmic pathways to execute transactions with lowest slippage, spread & margin</div>
+            <div class="gateWay_flex_inner_header_16">Market-neutral vault</div>
+            <div class="line_height_25">Take advantage of high-yield LPs without getting exposure to the assets. Maximize your returns on the blue-chip coins.</div>
            </div>
            <div class="mt_80">
-            <div class="gateWay_flex_inner_header_16"> Built-in risk monitoring framework</div>
-            <div class="line_height_25">Auto-assessment & actionable notifications for intrinsic & exogenous risks among the active positions</div>
+            <div class="gateWay_flex_inner_header_16"> DeFi option vault</div>
+            <div class="line_height_25">Combine yield farming strategies with multi-leg options trading to enable a range of risk-adjusted products.</div>
            </div>
         </div>
        </div>
       </div>
       <div class="custom-container mbl_device">
         <div class="section_subheader text-center section_subheader_res mt-5 mb-5">
-          Simplifying DeFi Execution
+          Ready to launch fully-automated vaults
           </div>
        <div class="gateWay_flex_mobile">
           <div class="gateWay_flex_mobile_inner mb-5">
-            <div class="mb-3"><img src="assets/images/inestor_mbl1.webp" alt="Aggregated staking, lending & farming​" class="wdt_90"></div>
-            <div class="list_header mb-2">Aggregated staking, lending & farming​</div>
-            <div>Explore top crypto assets and find the best DeFi opportunities aggregated through one easy-to-use interface
+            <div class="mb-3"><img src="assets/images/inestor_mbl1.webp" alt="Multi-pool ACC vault​" class="wdt_90"></div>
+            <div class="list_header mb-2">Multi-pool ACC vault​</div>
+            <div>Launch an auto-compounding vault with multiple assets & LPs. Automate your DeFi Ops with the highest efficiency.
             </div>
           </div>
           <div class="gateWay_flex_mobile_inner mb-5">
-            <div class="mb-3"><img src="assets/images/inestor_mblt5.png" alt="Automated & efficient transactions" class="wdt_90"></div>
-            <div class="list_header mb-2">Automated & efficient transactions</div>
-            <div>Smart automation and algorithmic pathways to execute transactions with lowest slippage, spread & margin
+            <div class="mb-3"><img src="assets/images/inestor_mbl3.webp" alt="Market-neutral vault" class="wdt_90"></div>
+            <div class="list_header mb-2">Market-neutral vault</div>
+            <div>Take advantage of high-yield LPs without getting exposure to the assets. Maximize your returns on the blue-chip coins.
             </div>
           </div>
           <div class="gateWay_flex_mobile_inner mb-5">
-            <div class="mb-3"><img src="assets/images/inestor_mbl3.webp" alt="Cross-chain to access full liquidity" class="wdt_90"></div>
-            <div class="list_header mb-2">Cross-chain to access full liquidity​</div>
-            <div>Integrated bridges for market composability; enabling users with seamless cross-chain execution
+            <div class="mb-3"><img src="assets/images/inestor_mblt4.webp" alt="Crypto index vault" class="wdt_90"></div>
+            <div class="list_header mb-2">Crypto index vault​</div>
+            <div>Customize parameters & launch crypto index vaults with automatic rebalancing. Yield generation with protocols of choice.
             </div>
           </div>
           
           <div class="gateWay_flex_mobile_inner">
-            <div class="mb-3"><img src="assets/images/inestor_mbl2.webp" alt=" Built-in risk monitoring framework" class="wdt_90"></div>
-            <div class="list_header mb-2"> Built-in risk monitoring framework</div>
-            <div>Auto-assessment & actionable notifications for intrinsic & exogenous risks among the active positions
+            <div class="mb-3"><img src="assets/images/inestor_mbl2.webp" alt="DeFi option vault" class="wdt_90"></div>
+            <div class="list_header mb-2">DeFi option vault</div>
+            <div>Combine yield farming strategies with multi-leg options trading to enable a range of risk-adjusted products.
             </div>
           </div>
        </div>
@@ -353,7 +358,7 @@
     <section class="small_pt mrgn_top_mbl" style="margin-bottom: -30px;">
       <div class="custom-container">
         <h1 class="section_subheader text-center mb_60 hrd_section_res">
-          Institutional-grade design
+          Infrastructure Features
         </h1>
         <div class="flex_cnt">
           <div class="flip-div gateway_section">
@@ -361,9 +366,9 @@
               <div class="front">
                 <div class="card">
                   <div class="card-body text-center">
-                    <div class="list_header txt_algn_lft">KYT & AML/CTF Screening</div>
+                    <div class="list_header txt_algn_lft">Customizable access</div>
                     <div class="stack_img mt_4rm">
-                      <img src="assets/images/gateway222.webp"  alt="KYT & AML/CTF Screening" class="flt_lft" />
+                      <img src="assets/images/gateway222.webp"  alt="Customizable access" class="flt_lft" />
                     </div>
                   </div>
                 </div>
@@ -371,7 +376,8 @@
               <div class="back">
                 <div class="card">
                     <div class="card-body">
-                        <div>On-chain due diligence & reporting with rigorous KYT & AML/CFT screening to ensure compliance with regulatory guidelines.</div>
+                        <div>Create private or whitelisted vaults. Customize access depending upon the vault usage and avoid counterparty risks.
+                        </div>
                       </div>
                   </div>
               </div>
@@ -382,9 +388,9 @@
               <div class="front">
                 <div class="card">
                   <div class="card-body text-center">
-                    <div class="list_header txt_algn_lft">Bank-level operational security</div>
+                    <div class="list_header txt_algn_lft">DeFi risk watcher</div>
                     <div class="stack_img mt_4rm">
-                      <img src="assets/images/home_gateway222.webp" alt="Bank-level operational security" style="height: 90px !important;" class="flt_lft" />
+                      <img src="assets/images/deFiRisk.png" alt="DeFi risk watcher" class="flt_lft" />
                     </div>
                   </div>
                 </div>
@@ -392,7 +398,8 @@
               <div class="back">
                 <div class="card">
                     <div class="card-body">
-                        <div>Built with bank-level operational security, the platform facilitates regulated custody of assets & MPC key storage. </div>
+                        <div>Monitor vaults for intrinsic & exogenous risks among active protocols & chains. Notify risks & take automatic actions to protect your portfolio.
+                        </div>
                       </div>
                   </div>
               </div>
@@ -403,9 +410,10 @@
               <div class="front">
                 <div class="card">
                   <div class="card-body text-center">
-                    <div class="list_header txt_algn_lft">Comprehensive reporting</div>
+                    <div class="list_header txt_algn_lft">Cross-chain enabled</div>
                     <div class="stack_img mt_4rm">
-                      <img src="assets/images/home_gateway111.webp" alt="Comprehensive reporting" class="flt_lft" />
+                      <img src="assets/images/crs_chn_enbl.png" alt="Cross-chain enabled" class="flt_lft" style="width: 100px;
+                      height: 100px !important;;" />
                     </div>
                   </div>
                 </div>
@@ -413,7 +421,7 @@
               <div class="back">
                 <div class="card">
                     <div class="card-body">
-                      <div>Generate on-demand tax reports. Built-in framework to ensure complex txns, yields & airdrops are accurately accounted. .</div>
+                      <div>Powered by cross-chain rails & integrated bridges, your DeFi strategy gets access to the free flow of liquidity among various networks.</div>
                     </div>
                   </div>
               </div>
@@ -425,9 +433,9 @@
               <div class="front">
                 <div class="card">
                   <div class="card-body text-center">
-                    <div class="list_header txt_algn_lft">Seamless <br> integration</div>
+                    <div class="list_header txt_algn_lft">Leverage integrated</div>
                     <div class="stack_img mt_4rm">
-                      <img src="assets/images/home_gateway444.webp" alt="Seamless integration" class="flt_lft" />
+                      <img src="assets/images/leverage.png" alt="Leverage integrated" class="flt_lft" />
                     </div>
                   </div>
                 </div>
@@ -435,7 +443,7 @@
               <div class="back">
                 <div class="card">
                     <div class="card-body">
-                      <div>Integrate into existing tech infrastructure and reporting/monitoring systems through our SDK & API solutions.</div>
+                      <div>Get access to in-built undercollateralized loans at any part of your strategy. Power any of your vaults with up to 5x leverage.</div>
                     </div>
                   </div>
               </div>
