--- a/index.html
+++ b/index.html
@@ -412,8 +412,8 @@
                   <div class="card-body text-center">
                     <div class="list_header txt_algn_lft">Cross-chain enabled</div>
                     <div class="stack_img mt_4rm">
-                      <img src="assets/images/crs_chn_enbl.png" alt="Cross-chain enabled" class="flt_lft" style="width: 100px;
-                      height: 100px !important;;" />
+                      <img src="assets/images/crs_chn_enbl.png" alt="Cross-chain enabled" class="flt_lft" style="    width: 110px;
+                      height: 90px !important;" />
                     </div>
                   </div>
                 </div>
